--- a/bach-gla-tp/src/main/resources/messages.properties
+++ b/bach-gla-tp/src/main/resources/messages.properties
@@ -1,4 +1,3 @@
 message = This is "message"
-message.test1 = This is "message.test1"
-message.param1 = This is "message.param1" - {0}
-message.param2 = This is "message.param2" - {0} and {1}
+message.firstname = First Name
+message.lastname = First Name
